2008-05-28  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/ITreeNavigator.cs,
	  MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs: Implemented
	  MoveToNextObject in ITreeNavigator, which moves the navigator to
	  the next node containing the same object.
	* MonoDevelop.Ide.Gui/Workbench.cs: When looking for a project to which
	  to bind a file being opened, look first in the active projects and
	  solutions. Fixes bug 370333 - Wrong file highlighted/selected when
	  using external files feature. 

2008-05-28  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs,
	  MonoDevelop.Ide.Gui/OutputProgressMonitor.cs: Implement support for
	  console logging.

2008-05-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/Document.cs: Deactivated on the fly parsing with
	  the new dom.

2008-05-27  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Debugging/DebuggingService.cs: Write debugger output
	  to the console. Properly implement Exit().
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs: Updated.

2008-05-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/Document.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Fixed dispose source
	  editor widget bug.

2008-05-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ClassPad/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/NamespaceNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/SolutionNodeBuilder.cs,
	  MonoDevelop.Ide.addin.xml, MonoDevelop.Ide.mdp, Makefile.am,
	  MonoDevelop.Ide.Gui/RootWorkspace.cs: Disabled the new class
	  browser.

2008-05-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/Document.cs: Fixed some bugs in the new dom
	  parsing.

2008-05-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ClassBrowser/TypeNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassBrowser/ClassBrowserPadWidget.cs,